<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">examguide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Welcome">Welcome to the TOEFL Planner. Please select one option from below.</string>
    <string name="Noob">I know nothing about the exam. I need a plan.</string>
    <string name="Nerd">I already have a plan.</string>
    <string name="title_activity_suggestions_page">SuggestionsPage</string>
    <string name="Suggestions_Page_Intro">These videos give a brief intriduction about the TOEFL exam. Go through them.</string>
    <string name="title_activity_nerd_page">NerdPage</string>
    <string name="NerdPage_Intro">You can do the Practice Tests now. </string>
    <string name="ExamDate">Enter Exam Date</string>
    <string-array name="months_array">
        <item >January</item>
        <item >February</item>
        <item >March</item>
        <item >April</item>
        <item >May</item>
        <item >June</item>
        <item >July</item>
        <item >August</item>
        <item >September</item>
        <item >October</item>
        <item >November</item>
        <item >December</item>
    </string-array>
    <string-array name="dates_array">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >9</item>
        <item >10</item>
        <item >11</item>
        <item >12</item>
        <item >13</item>
        <item >14</item>
        <item >15</item>
        <item >16</item>
        <item >17</item>
        <item >18</item>
        <item >19</item>
        <item >20</item>
        <item >21</item>
        <item >22</item>
        <item >23</item>
        <item >24</item>
        <item >25</item>
        <item >26</item>
        <item >27</item>
        <item >28</item>
        <item >29</item>
        <item >30</item>
        <item >31</item>
    </string-array>
    <string-array name="years_array">
        <item >2013</item>
        <item >2014</item>
        <item >2015</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="progress">Progress</string>
    
</resources>
