<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
<ImageView 
    android:id="@+id/WelcomeImage"
    android:src="@drawable/toefl1"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:contentDescription="Welcome to the ExamGuide"
	
    />

<TextView 
    android:id="@+id/SelectOne"
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/Welcome"
	android:layout_below="@+id/WelcomeImage"   
    />
    
<Button 
    android:id="@+id/Nothing"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:text="@string/Noob"
	android:onClick="openSuggestionsPage"
	android:layout_below="@id/SelectOne" 
    />


<Button 
    android:id="@+id/Something"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Nerd"
    android:onClick="openNerdPage"
    android:layout_below="@+id/Nothing"
    />

</RelativeLayout>
