<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NerdPage" >

    
    <TextView 
        android:id="@+id/examDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ExamDate"
        />

    <Spinner 
        android:id="@+id/date_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/examDate"
        android:entries="@array/dates_array"
        
        />
    <Spinner 
        android:id="@+id/month_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/date_spinner"
        android:layout_below="@id/examDate"
        android:entries="@array/months_array"
        />
    <Spinner 
        android:id="@+id/year_spinner"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/month_spinner"
		android:layout_below="@id/examDate"
		android:entries="@array/years_array"        
        />
    <Button 
        android:id="@+id/submitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/year_spinner"
        android:text="@string/submit"
        
        />
    
    <TextView 
		android:id="@+id/daysLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submitbtn"
		        
        />
    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NerdPage_Intro" 
        android:layout_below="@id/daysLeft"/>
    
    <TextView 
        android:id="@+id/pracTest1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro"
        android:clickable="true"
        android:textColor="@color/blue"
        />
    <TextView 
        android:id="@+id/pracTest2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pracTest1"
        android:clickable="true"
        android:textColor="@color/blue"
        />
	<TextView 
	    android:id="@+id/pracTest3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:clickable="true"
	    android:layout_below="@id/pracTest2"
	    android:textColor="@color/blue"
	    />    
	<TextView 
	    android:id="@+id/pracTest4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pracTest3"
	    android:textColor="@color/blue"
	    android:clickable="true"
	    />    
	    
	<TextView 
	    android:id="@+id/Progress"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pracTest4"
	    android:text="@string/progress"
	    android:textSize="30sp"
	    
	    />
	<ProgressBar 
	    android:id="@+id/progressBar"
	    style="@android:style/Widget.ProgressBar.Horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/Progress"
	    android:progress="0"
	    android:minWidth="100dp"
	    
	    android:max="100"
	    
	    />
		    
</RelativeLayout>
